hphp/test/quick/vgets.php.expectf
Fatal error: Only variables and the results of function calls can be used as references in %s/vgets.php on line 26
